fixed add server